
- GD:
  . Implemented imageresolution as getter and setter (Christoph)
  . Fixed bug #74744 (gd.h: stdarg.h include missing for va_list use in
    gdErrorMethod). (rainer dot jung at kippdata dot de, cmb)
  . Fixed bug #75111 (Memory disclosure or DoS via crafted .bmp image). (cmb)

- GMP:
  . Fixed bug #70896 (gmp_fact() silently ignores non-integer input). (Sara)

- Hash:
  . Changed HashContext from resource to object. (Rouven Weßling, Sara)
  . Disallowed usage of non-cryptographic hash functions with HMAC and PBKDF2.
    (Andrey Andreev, Nikita)
  . Fixed Bug #75284 (sha3 is not supported on bigendian machine). (Remi)

- IMAP:
  . Fixed bug #72324 (imap_mailboxmsginfo() return wrong size).
    (ronaldpoon at udomain dot com dot hk, Kalle)

- Intl:
  . Fixed bug #63790 (test using Spoofchecker which may be unavailable). (Sara)
  . Fixed bug #75378 ([REGRESSION] IntlDateFormatter::parse() does not change
    $position argument). (Laruence)

- JSON:
  . Add JSON_INVALID_UTF8_IGNORE and JSON_INVALID_UTF8_SUBSTITUTE options for
    json_encode and json_decode to ignore or replace invalid UTF-8 byte
    sequences - it addresses request #65082. (Jakub Zelenka)
  . Fixed bug #75185 (Buffer overflow in json_decode() with
    JSON_INVALID_UTF8_IGNORE or JSON_INVALID). (Jakub Zelenka)
  . Fixed bug #68567 (JSON_PARTIAL_OUTPUT_ON_ERROR can result in JSON with null
    key). (Jakub Zelenka)

- LDAP:
  . Implemented FR #69445 (Support for LDAP EXOP operations)
  . Fixed support for LDAP_OPT_SERVER_CONTROLS and LDAP_OPT_CLIENT_CONTROLS in ldap_get_option
  . Fixed passing an empty array to ldap_set_option for client or server controls.

- Mbstring:
  . Implemented request #66024 (mb_chr() and mb_ord()). (Masakielastic, Yasuo)
  . Implemented request #65081 (mb_scrub()). (Masakielastic, Yasuo)
  . Implemented request #69086 (enhancement for mb_convert_encoding() that
    handles multibyte replacement char nicely). (Masakielastic, Yasuo)