@@ -11,6 +11,7 @@ BUILD_FILES = \
 	build/scan_makefile_in.awk \
 	build/libtool.m4 \
 	build/ax_check_compile_flag.m4 \
+	build/pkg.m4 \
 	Makefile.global \
 	acinclude.m4 \
 	ltmain.sh \
